# IceRender

./: .gitignore  CMakeLists.txt  README.md  README2.md
Output/SAT/: note.txt
Resources/HeaderTemplate/: template.cpp  template.hpp
Resources/SceneConfigs/DeferredShadingScene/: scene.json
Resources/SceneConfigs/Distortion/: scene.json
Resources/SceneConfigs/GenerateShadersScene/: gen_gaussian_float_shader.json  gen_gaussian_vec3_shader.json
Resources/SceneConfigs/PCFScene/: scene_PCF_off.json  scene_PCF_on.json
Resources/SceneConfigs/PCSSScene/: scene_PCSS_off.json  scene_PCSS_on.json  scene_contact_object.json
Resources/SceneConfigs/SSAOScene/: scene.json  scene2.json  scene_gaussian_filter.json  scene_rect_filter.json  scene_ssdo.json  scene_test_delete_later.json  scene_with_vsm.json
Resources/SceneConfigs/SimpleWater/: scene.json
Resources/SceneConfigs/SonarLightScene/: sonar_light.json
Resources/SceneConfigs/TestLoadModel/: scene.json
Resources/SceneConfigs/TestScene/: scene_test_dissolve.json  scene_test_replace_shader.json  scene_test_unroll_shader.json  test_scene_0.json  test_scene_1.json  test_scene_2.json  test_scene_3.json  test_scene_4.json  test_scene_5.json  test_scene_6.json
Resources/SceneConfigs/VSMPCSSScene/: README.md  scene_VSM_PCSS_off.json  scene_VSM_PCSS_on.json  scene_contact_object.json  scene_multiple_plane.json  scene_vsm_sat_pcss_actually_not_very_useful.json
Resources/SceneConfigs/VSMScene/: README.md  scene3.json  scene4_showing_why_SAT_is_useful.json  scene_VSM_Car_SAT_off.json  scene_VSM_Car_SAT_on.json  scene_VSM_SAT_off.json  scene_multiple_plane.json
Resources/Shaders/: README-ReplaceShader.md  README-UnrollShader.md  README-UsageOfGenerateShader.md
Resources/Shaders/DeferredShading/: deferred_shading.fs  deferred_shading.main_fs  deferred_shading_ssao.main_fs  gbuffers.fs  gbuffers.vs
Resources/Shaders/Dissolve/: dissolve.fs  dissolve.main_fs  dissolve.vs
Resources/Shaders/Distortion/: distortion.fs  distortion.vs
Resources/Shaders/Filters/: filter.main_vs
Resources/Shaders/Phong/: phong.fs  phong_sm_pcf.main_fs  phong_sm_pcss.main_fs  phong_vsm.main_fs  phong_vsm_pcss.main_fs
Resources/Shaders/PostProcess/: phong.fs
Resources/Shaders/SAT/: sat2BoxFilter.fs  sat2Copy.fs  (+9 more)
Sources/: console.cpp  console.hpp  globals.cpp  globals.hpp  main.cpp
Sources/camera/: camera.cpp  camera.hpp  cameraController.cpp  cameraController.hpp
Sources/helpers/: logger.cpp  logger.hpp  satGenerator.cpp  satGenerator.hpp  utility.cpp  utility.hpp
Sources/input/: keyInput.cpp  keyInput.hpp
Sources/light/: baseLight.cpp  baseLight.hpp  directLight.cpp  directLight.hpp  pointLight.cpp  pointLight.hpp
Sources/material/: material.cpp  material.hpp  phongMaterial.cpp  phongMaterial.hpp
Sources/mesh/: mesh.cpp  mesh.hpp  meshGenerator.cpp  meshGenerator.hpp
Sources/rasterizer/: rasterizer.cpp  rasterizer.hpp  renderMethod.cpp  renderMethod.hpp
Sources/scene/: sceneManager.cpp  sceneManager.hpp  sceneObject.cpp  sceneObject.hpp  sceneObjectGenerator.cpp  sceneObjectGenerator.hpp
Sources/shadermgr/: shaderManager.cpp  shaderManager.hpp  shaderProgram.cpp  shaderProgram.hpp
Sources/shadow/: shadow.cpp  shadow.hpp
Sources/singleton/: singleton.hpp
Sources/spatial_structure/: AABB.cpp  AABB.hpp
Sources/test_unit/: testFunctions.cpp  testFunctions.hpp  testUnit.cpp  testunit.hpp
Sources/time/: timeManager.cpp  timeManager.hpp
Sources/transform/: transform.cpp  transform.hpp
(+51 files in other folders)
